# prueba-tecnica-sc

./: .cruft.json  README.md  pyproject.toml
.github/workflows/: automerge.yml  labels.yml
data/: README.md
models/: atypical_detection_catboost_v1.joblib
notebooks/: README.md
notebooks/1-EDA/: EDA.ipynb
notebooks/2-FeatureEngineering/: FeatureEngineering.ipynb
notebooks/3-ModelSelection/: model_selection.ipynb  modelado.ipynb
notebooks/3-ModelSelection/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/3-ModelSelection/catboost_info/learn/: events.out.tfevents
notebooks/4-Interpretation/: interpretacion.ipynb
results/: final_model_interpretation_and_implementation.json  training_results_catboost_v1.json
